syntax = "proto3";
option go_package = "gitlab.com/shar-workflow/shar/model";

//import "google/protobuf/timestamp.proto";
//import "google/protobuf/duration.proto";
//import "google/protobuf/any.proto";

message Workflow {
  string Name = 1;
  map<string,Process> Process = 2;
  repeated Element messages = 3;
  repeated Error errors = 4;
}

message Process {
  repeated Element elements = 1;
  string Name      = 2;
}

message WorkflowVersions {
  repeated WorkflowVersion version = 1;
}

message WorkflowVersion {
  string id = 1;
  bytes sha256 = 2;
  int32 number = 3;
}

message Element {
  string id = 1;
  string name = 2;
  string type = 3;
  string documentation =4;
  string execute =5;
  Targets outbound = 6;
  Process process = 7;
  string msg = 8;
  string retries = 9;
  string candidates = 10;
  string candidateGroups = 11;
  repeated CatchError errors = 12;
  Error error = 13;
}

message Target {
  string id          = 1;
  repeated string conditions =2;
  string target     =3;
}

message Error {
  string id = 1;
  string name = 2;
  string code = 3;
}

message CatchError {
  string id      = 1;
  string errorId = 2;
  string target  = 3;
}

message Targets {
  repeated Target target = 1;
  bool exclusive = 2;
}

message Messages {
  string name = 1;
}

message WorkflowState {
  string workflowId = 1;
  string workflowInstanceId = 2;
  string elementId = 3;
  string elementType = 4;
  string Id = 5;
  string parentId = 6;
  optional string execute = 7;
  CancellationState state = 8;
  optional string condition = 9;
  int64 unixTimeNano = 10;
  bytes vars = 11;
  repeated string owners = 12;
  repeated string groups = 13;
  Error error = 14;
}

message WorkflowInstance {
  string workflowInstanceId = 1;
  optional string parentWorkflowInstanceId = 2;
  optional string parentElementId = 3;
  string workflowId = 4;
}

message MessageInstance {
  string messageId = 1;
  string correlationKey = 2;
  bytes vars = 3;
}

message WorkflowInstanceSubscribers {
  repeated string list = 1; // stateId
}

message UserTasks {
  repeated string id = 1;
}


message LaunchWorkflowRequest {
  string name = 1;
  bytes vars = 2;
}

enum CancellationState {
  Executing = 0;
  Completed = 1;
  Terminated = 2;
  Errored = 3;
}

message CancelWorkflowInstanceRequest {
  string id = 1;
  CancellationState state = 2;
  Error error = 3;
}

message GetWorkflowInstanceStatusRequest {
  string id = 1;
}

message ListWorkflowInstanceRequest {
  string workflowName = 1;
}

message ListWorkflowInstanceResponse {
  repeated ListWorkflowInstanceResult result = 1;
}


message ListWorkflowInstanceResult {
  string id = 1;
  int32 version = 2;
}

message WorkflowInstanceInfo {
  string id = 1;
  string workflowId = 2;
}

message WorkflowInstanceStatus {
  repeated WorkflowState state = 1;
}

message ListWorkflowsResponse {
  repeated ListWorkflowResult result = 1;
}

message ListWorkflowResult {
  string name = 1;
  int32 version = 2;
}

message SendMessageRequest {
  string name = 1;
  string key = 2;
  string workflowInstanceId = 3;
  bytes vars = 4;
}

message WorkflowInstanceComplete {
  string workflowName = 1;
  string workflowId = 2;
  string workflowInstanceId = 3;
  CancellationState workflowState = 4;
  Error error = 5;
}

message CompleteManualTaskRequest {
  string trackingId = 1;
  bytes vars = 2;
}

message CompleteServiceTaskRequest {
  string trackingId = 1;
  bytes vars = 2;
}

message CompleteUserTaskRequest {
  string trackingId = 1;
  string owner = 2;
  bytes vars = 3;
}

message ListUserTasksRequest {
  string owner = 1;
}

message GetUserTaskRequest {
  string owner = 1;
  string trackingId = 2;
}

message GetUserTaskResponse {
  string trackingId = 1;
  string owner = 2;
  string description = 3;
  string name = 4;
  bytes vars = 5;
}

message HandleWorkflowErrorRequest {
  string trackingId = 1;
  string errorCode = 2;
  string message = 3;
}

message HandleWorkflowErrorResponse {
  bool handled = 1;
}

message WorkflowStats {
  int64 Workflows = 1;
  int64 InstancesStarted = 2;
  int64 InstancesComplete = 3;
}